<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <TextView
        android:id="@+id/register_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:alpha="0"
        android:text="@string/register_heading"
        android:textColor="?attr/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:alpha="1" />

    <TextView
        android:id="@+id/edt_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:text="@string/edt_name_label"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_heading"
        tools:alpha="1" />

    <com.jordyf15.storyapp.ui.customview.NameEditText
        android:id="@+id/edt_name"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:alpha="0"
        android:background="@drawable/edit_text_background"
        android:hint="@string/edt_name_hint"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/edt_name_label"
        tools:alpha="1" />

    <TextView
        android:id="@+id/edt_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:text="@string/edt_email_label"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_name"
        tools:alpha="1" />

    <com.jordyf15.storyapp.ui.customview.EmailEditText
        android:id="@+id/edt_email"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:alpha="0"
        android:background="@drawable/edit_text_background"
        android:hint="@string/edt_email_hint"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/edt_email_label"
        tools:alpha="1" />

    <TextView
        android:id="@+id/edt_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:text="@string/edt_password_label"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        tools:alpha="1" />

    <com.jordyf15.storyapp.ui.customview.PasswordEditText
        android:id="@+id/edt_password"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:alpha="0"
        android:background="@drawable/edit_text_background"
        android:hint="@string/edt_password_label"
        android:inputType="textPassword"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/edt_password_label"
        tools:alpha="1" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:alpha="0"
        android:padding="15dp"
        android:text="@string/register_btn"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        tools:alpha="1" />

    <TextView
        android:id="@+id/tv_error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red_error"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_btn"
        tools:text="@string/error_msg" />

    <LinearLayout
        android:id="@+id/login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_error_msg"
        tools:alpha="1">

        <TextView
            android:id="@+id/tv_already_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_register"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/to_login"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Loading"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>