<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.StoryDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile_pic"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/default_profile_picture"
            android:transitionName="profilePicture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:transitionName="name"
            app:layout_constraintBottom_toBottomOf="@id/img_profile_pic"
            app:layout_constraintStart_toEndOf="@id/img_profile_pic"
            app:layout_constraintTop_toTopOf="@id/img_profile_pic"
            tools:text="@string/list_item_name" />

        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:transitionName="photo"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            tools:src="@tools:sample/cities" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:transitionName="description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_photo"
            tools:text="@string/list_item_description" />

        <TextView
            android:id="@+id/tv_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/gray_400"
            android:textSize="12sp"
            android:transitionName="timestamp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            tools:text="@string/list_item_timestamp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>